# lambda-calc

./: COPYING.txt  Cargo.toml  README.md
inputs/: church.txt  clni.txt
src/: ast.rs  cmd.rs  lexer.rs  lib.rs  main.rs  opt.rs  parser.rs  repl.rs
