[package]
name = "lambda_calc"
version = "1.0.0"
authors = ["Luana C M de F Barbosa <luamfb@riseup.net>"]
edition = "2018"
description = "A CLI lambda calculus interpreter"
license = "MIT"

#![doc(html_root_url = "https://docs.rs/lambda_calc")]

[dependencies]
rustyline = "5.0.0"
rustyline-derive = "0.2.0"
