[package]
name = "lambda_calc"
version = "2.2.1"
authors = ["Luana C M de F Barbosa <luamfb@riseup.net>"]
edition = "2018"
description = "A command-line untyped lambda calculus interpreter."
readme = "README.md"
documentation = "https://docs.rs/lambda_calc"
license = "MIT"

[dependencies]
rustyline = "5.0.0"
rustyline-derive = "0.2.0"
signal-hook = "0.1.13"
